# Daytoday

./: .gitignore  LICENSE  README.md  demo-folder.html  demo.html  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: 待优化清单.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  lib.rs  main.rs  models.rs  storage.rs  webdav.rs
src/components/: ClipsPanel.tsx  ContentPanel.tsx  FilesPanel.tsx  FlashcardsPanel.tsx  Heatmap.tsx  LearningMode.tsx  NotesPanel.tsx  QuestionEditModal.tsx  QuestionsPanel.tsx  QuickNoteModal.tsx  SettingsPanel.tsx  Sidebar.tsx  SummaryPanel.tsx  TaskBoard.tsx  TaskEditModal.tsx  Titlebar.tsx
src/store/: useAppStore.ts
src/types/: index.ts
src/utils/: shortcut.ts
